--- a/app/src/main/res/layout/frag1.xml
+++ b/app/src/main/res/layout/frag1.xml
@@ -37,7 +37,7 @@
         android:layout_margin="20dp"
         android:contentDescription="Add clothing"
         android:src="@android:drawable/ic_input_add"
-        app:backgroundTint="#018786"
+        app:backgroundTint="#b0daff"
         app:tint="@android:color/white" />
 
 </FrameLayout>
