--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,5 +11,6 @@
         <item name="android:windowBackground">#121212</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textColorHint">#AAAAAA</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
     </style>
 </resources>
