final app, has alot of room for improvement, also this commit does not include the serverside and db, idk how to include them lol!!! let me figure it out later

--- a/app/src/main/res/layout/activity_label.xml
+++ b/app/src/main/res/layout/activity_label.xml
@@ -52,6 +52,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+        <EditText
+            android:id="@+id/etMaxWear"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Max Wear Count"
+            android:inputType="number"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"/>
+
         <Spinner
             android:id="@+id/spinnerArea"
             android:layout_width="match_parent"
