--- a/app/src/main/res/menu/bottomnav.xml
+++ b/app/src/main/res/menu/bottomnav.xml
@@ -4,17 +4,17 @@
 
     <item
         android:id="@+id/nav_wardrobe"
-        android:icon="@android:drawable/ic_menu_gallery"
+        android:icon="@drawable/ic_wardrobe"
         android:title="Wardrobe" />
 
     <item
         android:id="@+id/nav_outfits"
-        android:icon="@android:drawable/ic_menu_edit"
+        android:icon="@drawable/ic_outfits"
         android:title="Outfits" />
 
     <item
         android:id="@+id/nav_wash"
-        android:icon="@android:drawable/ic_menu_manage"
+        android:icon="@drawable/ic_laundry"
         android:title="Wash Tracker" />
 
     <item
